force-app/main/default/objects/Form_1_Status__c/Form_1_Status__c.object-meta.xml
<CustomObject>
    <description>HR - To track activies of Form 1 Status</description>
    <label>Form 1 Status</label>
    <nameField>
        <displayFormat>F1S-{0000}</displayFormat>
        <label>Form 1 Status Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form 1 Status</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>