force-app/main/default/objects/Form_1_Status__c/fields/Date_Completed_Interviews__c.field-meta.xml
<CustomField>
    <fullName>Date_Completed_Interviews__c</fullName>
    <label>Date Completed Interviews</label>
    <type>Date</type>
</CustomField>