force-app/main/default/objects/Form_1_Status__c/fields/Date_of_Information_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Information_Receipt__c</fullName>
    <label>Date of Information Receipt</label>
    <type>Date</type>
</CustomField>