force-app/main/default/objects/Form_1_Status__c/fields/Date_of_Notification__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Notification__c</fullName>
    <label>Date of Notification</label>
    <type>Date</type>
</CustomField>