force-app/main/default/objects/Form_1_Status__c/fields/Date_Received_from_Program__c.field-meta.xml
<CustomField>
    <fullName>Date_Received_from_Program__c</fullName>
    <label>Date Received from Program</label>
    <type>Date</type>
</CustomField>