force-app/main/default/objects/Form_1_Status__c/fields/Date_Received_from_Transactions__c.field-meta.xml
<CustomField>
    <fullName>Date_Received_from_Transactions__c</fullName>
    <inlineHelpText>Required before advancing to next status</inlineHelpText>
    <label>Date Received from Transactions</label>
    <type>Date</type>
</CustomField>