force-app/main/default/objects/Form_1_Status__c/fields/Date_Revision_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Revision_Received__c</fullName>
    <description>for status "Part X - Return to Program"</description>
    <inlineHelpText>Required before advancing to next status</inlineHelpText>
    <label>Date Revision Received</label>
    <type>Date</type>
</CustomField>