force-app/main/default/objects/Form_1_Status__c/fields/Date_Sent_to_Transactions__c.field-meta.xml
<CustomField>
    <fullName>Date_Sent_to_Transactions__c</fullName>
    <label>Date Sent to Transactions</label>
    <type>Date</type>
</CustomField>