force-app/main/default/objects/Form_1_Status__c/fields/Date_Time_Input_Test__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Input_Test__c</fullName>
    <label>Date Time Input Test</label>
    <type>DateTime</type>
</CustomField>