force-app/main/default/objects/Form_1_Status__c/fields/Effective_Appointment_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Appointment_Date__c</fullName>
    <label>Effective Appointment Date</label>
    <type>Date</type>
</CustomField>