force-app/main/default/objects/Form_1_Status__c/fields/Hire_Type__c.field-meta.xml
<CustomField>
    <fullName>Hire_Type__c</fullName>
    <label>Hire Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New to State</fullName>
            </value>
            <value>
                <fullName>Previous State EE</fullName>
            </value>
            <value>
                <fullName>Current DIR EE</fullName>
            </value>
            <value>
                <fullName>Transfer from other Department</fullName>
            </value>
            <value>
                <fullName>Other (Legacy)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>