force-app/main/default/objects/Form_1_Status__c/fields/Incumbent_Name__c.field-meta.xml
<CustomField>
    <fullName>Incumbent_Name__c</fullName>
    <label>Incumbent Name</label>
    <length>70</length>
    <type>Text</type>
</CustomField>