force-app/main/default/objects/Form_1_Status__c/fields/Interview_Date_1__c.field-meta.xml
<CustomField>
    <fullName>Interview_Date_1__c</fullName>
    <description>for status 'Interview Scheduled' and 'Interview Conducted'</description>
    <label>Interview Date 1</label>
    <type>Date</type>
</CustomField>