force-app/main/default/objects/Form_1_Status__c/fields/Interview_Date_2__c.field-meta.xml
<CustomField>
    <fullName>Interview_Date_2__c</fullName>
    <description>For status 'Interview Scheduled' and 'Interview Conducted'</description>
    <label>Interview Date 2</label>
    <type>Date</type>
</CustomField>