force-app/main/default/objects/Form_1_Status__c/fields/Job_Post_Date_4__c.field-meta.xml
<CustomField>
    <fullName>Job_Post_Date_4__c</fullName>
    <label>Job Post Date 4</label>
    <type>Date</type>
</CustomField>