force-app/main/default/objects/Form_1_Status__c/fields/Last_Scheduled_Interview_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Scheduled_Interview_Date__c</fullName>
    <label>Last Scheduled Interview Date</label>
    <type>Date</type>
</CustomField>