force-app/main/default/objects/Form_1_Status__c/fields/List_of_Panel_Members__c.field-meta.xml
<CustomField>
    <fullName>List_of_Panel_Members__c</fullName>
    <description>for status "HR – Part 2 Approved".</description>
    <inlineHelpText>Enter names, separate them by comma</inlineHelpText>
    <label>List of Panel Members</label>
    <length>255</length>
    <type>Text</type>
</CustomField>