force-app/main/default/objects/Form_1_Status__c/fields/Minimum_Qualification_Withhold_Duration__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Qualification_Withhold_Duration__c</fullName>
    <formula>IF ( RecordType.DeveloperName = 'Minimum_Qualification_Withhold',

(

IF ( Error_or_Invalid__c = TRUE, 0,


IF ( Status_End_Date__c = DATE(1700,01,01), 0,


IF ( ISBLANK( Status_End_Date__c ) , ( Todays_Date_Hidden__c - Date_of_Status__c + 1 ) ,


Status_End_Date__c - Date_of_Status__c + 1 ) ) )

), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Minimum Qualification Withhold Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>