force-app/main/default/objects/Form_1_Status__c/fields/Name_of_Alternate_Candidate__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Alternate_Candidate__c</fullName>
    <label>Name of Alternate Candidate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>