force-app/main/default/objects/Form_1_Status__c/fields/Name_of_Candidate__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Candidate__c</fullName>
    <description>for status "Candidate Declined' and "HR – Job Offer Clearance Notification"</description>
    <label>Name of Candidate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>