force-app/main/default/objects/Form_1_Status__c/fields/On_Hold_Reason__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_Reason__c</fullName>
    <description>for status 'On Hold'</description>
    <label>On Hold Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Reorg Approval</fullName>
            </value>
            <value>
                <fullName>Allocation Factors</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <label>Other (See Status Notes)</label>
            </value>
            <value>
                <fullName>Other (Legacy)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>