force-app/main/default/objects/Form_1_Status__c/fields/Part_1_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Part_1_Approval_Date__c</fullName>
    <description>for status "HR - PART 1 Approval Date"</description>
    <label>Part 1 Approval Date</label>
    <type>Date</type>
</CustomField>