force-app/main/default/objects/Form_1_Status__c/fields/Part_1_Program_Return_Reason_s__c.field-meta.xml
<CustomField>
    <fullName>Part_1_Program_Return_Reason_s__c</fullName>
    <label>Part 1 Program Return Reason(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Duty Statement missing or revisions needed</fullName>
            </value>
            <value>
                <fullName>Statement of Qualifications Missing or Revisions Needed</fullName>
            </value>
            <value>
                <fullName>Job Bulletin missing or revisions needed</fullName>
            </value>
            <value>
                <fullName>Justification revision needed or missing</fullName>
            </value>
            <value>
                <fullName>Knowledge, Skills, Abilities</fullName>
            </value>
            <value>
                <fullName>Org chart update needed</fullName>
            </value>
            <value>
                <fullName>Other (See Status Notes)</fullName>
            </value>
            <value>
                <fullName>Other (Legacy)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>