force-app/main/default/objects/Form_1_Status__c/fields/Part_2_Under_Review_Duration__c.field-meta.xml
<CustomField>
    <fullName>Part_2_Under_Review_Duration__c</fullName>
    <formula>IF ( RecordType.DeveloperName = 'Packet_to_HR_Part_2_Under_Review',

   ( 

      IF ( Error_or_Invalid__c = TRUE, 0,

          IF ( Status_End_Date__c =  DATE(1700,01,01), 0,

              IF ( ISBLANK( Status_End_Date__c ) , ( Todays_Date_Hidden__c - 

                 Review_Packet_Received_Date__c + 1) ,

                      Status_End_Date__c - Review_Packet_Received_Date__c + 1 ) ) )

   )

 , 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Part 2 Under Review Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>