force-app/main/default/objects/Form_1_Status__c/fields/Reason_for_Decline__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Decline__c</fullName>
    <label>Reason for Decline</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No longer interested</fullName>
            </value>
            <value>
                <fullName>Accepted other employment</fullName>
            </value>
            <value>
                <fullName>Salary level</fullName>
            </value>
            <value>
                <fullName>Personal reasons</fullName>
            </value>
            <value>
                <fullName>Other-Legacy</fullName>
            </value>
            <value>
                <fullName>Other (See Status Notes)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>