force-app/main/default/objects/Form_1_Status__c/fields/Record_Status_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Status_Type__c</fullName>
    <formula>IF(
   (  TEXT (Form1_Status_Type__c) = "Canceled by Division"
   || TEXT (Form1_Status_Type__c) = "Canceled by HR"
   || TEXT (Form1_Status_Type__c) = "Request to Hire Submitted"
   || TEXT (Form1_Status_Type__c) = "Release of Applications"
   || TEXT (Form1_Status_Type__c) = "Interviews - Conducted"
   || TEXT (Form1_Status_Type__c) = "Packet to HR - Part 1 Received" 
   || TEXT (Form1_Status_Type__c) = "Packet to HR - Part 1 Under Review"
   || TEXT (Form1_Status_Type__c) = "Packet to HR - Part 2 Received"
   || TEXT (Form1_Status_Type__c) = "Packet to HR - Part 2 Under Review"
   || TEXT (Form1_Status_Type__c) = "HR Final Packet - Analyst Approved"
   || TEXT (Form1_Status_Type__c) = "HR Final Packet - Manager Approved"
   || TEXT (Form1_Status_Type__c) = "HR Final Packet - Submitted to CalHR"
   || TEXT (Form1_Status_Type__c) = "CalHR - Approved"
   || TEXT (Form1_Status_Type__c) = "CalHR - Denied"
   || TEXT (Form1_Status_Type__c) = "HR - Job Offer Clearance Notification")
   ,
   "Tracked"
   ,
   (
     IF (
           CONTAINS( TEXT(Form1_Status_Type__c), "Hold")
   ,
   "Hold-Tracked"
   ,
   "")
   )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Status Type</label>
    <type>Text</type>
</CustomField>