force-app/main/default/objects/Form_1_Status__c/fields/Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Review_Date__c</fullName>
    <inlineHelpText>Required before advancing to next status</inlineHelpText>
    <label>Review Date</label>
    <type>Date</type>
</CustomField>