force-app/main/default/objects/Form_1_Status__c/fields/Review_Packet_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Review_Packet_Received_Date__c</fullName>
    <description>For status "Packet to HR - Part X Under Review"</description>
    <label>Review Packet Received Date</label>
    <type>Date</type>
</CustomField>