force-app/main/default/objects/Form_1_Status__c/fields/Signed_Job_Offer_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Signed_Job_Offer_Received_Date__c</fullName>
    <label>Signed Job Offer Received Date</label>
    <type>Date</type>
</CustomField>