force-app/main/default/objects/Form_1_Status__c/fields/Status_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Status_End_Date__c</fullName>
    <description>When a status work ends</description>
    <label>Status End Date</label>
    <type>Date</type>
</CustomField>