force-app/main/default/objects/Form_1_Status__c/fields/Todays_Date_Hidden__c.field-meta.xml
<CustomField>
    <fullName>Todays_Date_Hidden__c</fullName>
    <description>to be updated by flow every night with Today()</description>
    <label>Todays Date Hidden</label>
    <type>Date</type>
</CustomField>