force-app/main/default/objects/Form_1_Status__c/fields/Training_Confirmed_by_C_P__c.field-meta.xml
<CustomField>
    <fullName>Training_Confirmed_by_C_P__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Required</inlineHelpText>
    <label>Training Confirmed by C&amp;P</label>
    <type>Checkbox</type>
</CustomField>