force-app/main/default/objects/Form_1_Status__c/fields/Withhold_Status__c.field-meta.xml
<CustomField>
    <fullName>Withhold_Status__c</fullName>
    <inlineHelpText>Required before advancing to next status</inlineHelpText>
    <label>Withhold Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Permanent Withhold</fullName>
            </value>
            <value>
                <fullName>Minimum Qualifications Met</fullName>
            </value>
            <value>
                <fullName>Other-Legacy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>