force-app/main/default/objects/Form_1_Status__c/recordTypes/CalHR_Approved.recordType-meta.xml
<RecordType>
    <fullName>CalHR_Approved</fullName>
    <active>true</active>
    <label>CalHR - Approved</label>
</RecordType>