force-app/main/default/objects/Form_1_Status__c/recordTypes/CalHR_Denied.recordType-meta.xml
<RecordType>
    <fullName>CalHR_Denied</fullName>
    <active>true</active>
    <label>CalHR - Denied</label>
</RecordType>