force-app/main/default/objects/Form_1_Status__c/recordTypes/CalHR_Under_Review.recordType-meta.xml
<RecordType>
    <fullName>CalHR_Under_Review</fullName>
    <active>true</active>
    <label>CalHR - Under Review</label>
</RecordType>