force-app/main/default/objects/Form_1_Status__c/recordTypes/Canceled_by_Division.recordType-meta.xml
<RecordType>
    <fullName>Canceled_by_Division</fullName>
    <active>true</active>
    <label>Canceled by Division</label>
</RecordType>