force-app/main/default/objects/Form_1_Status__c/recordTypes/Canceled_by_HR.recordType-meta.xml
<RecordType>
    <fullName>Canceled_by_HR</fullName>
    <active>true</active>
    <label>Canceled by HR</label>
</RecordType>