force-app/main/default/objects/Form_1_Status__c/recordTypes/Candidate_Accepts.recordType-meta.xml
<RecordType>
    <fullName>Candidate_Accepts</fullName>
    <active>true</active>
    <label>Candidate Accepts</label>
</RecordType>