force-app/main/default/objects/Form_1_Status__c/recordTypes/Candidate_Declined.recordType-meta.xml
<RecordType>
    <fullName>Candidate_Declined</fullName>
    <active>true</active>
    <label>Candidate Declined</label>
</RecordType>