force-app/main/default/objects/Form_1_Status__c/recordTypes/HR_Final_Packet_Analyst_Approved.recordType-meta.xml
<RecordType>
    <fullName>HR_Final_Packet_Analyst_Approved</fullName>
    <active>true</active>
    <label>HR Final Packet - Analyst Approved</label>
</RecordType>