force-app/main/default/objects/Form_1_Status__c/recordTypes/HR_Final_Packet_Submitted_to_CalHR.recordType-meta.xml
<RecordType>
    <fullName>HR_Final_Packet_Submitted_to_CalHR</fullName>
    <active>true</active>
    <label>HR Final Packet - Submitted to CalHR</label>
</RecordType>