force-app/main/default/objects/Form_1_Status__c/recordTypes/HR_Job_Offer_Clearance_Notification.recordType-meta.xml
<RecordType>
    <fullName>HR_Job_Offer_Clearance_Notification</fullName>
    <active>true</active>
    <label>HR - Job Offer Clearance Notification</label>
</RecordType>