force-app/main/default/objects/Form_1_Status__c/recordTypes/HR_Part_2_Approved.recordType-meta.xml
<RecordType>
    <fullName>HR_Part_2_Approved</fullName>
    <active>true</active>
    <label>HR – Part 2 Approved</label>
</RecordType>