force-app/main/default/objects/Form_1_Status__c/recordTypes/Interviews_Conducted.recordType-meta.xml
<RecordType>
    <fullName>Interviews_Conducted</fullName>
    <active>true</active>
    <label>Interviews - Conducted</label>
</RecordType>