force-app/main/default/objects/Form_1_Status__c/recordTypes/Interviews_Scheduled.recordType-meta.xml
<RecordType>
    <fullName>Interviews_Scheduled</fullName>
    <active>true</active>
    <label>Interviews - Scheduled</label>
</RecordType>