force-app/main/default/objects/Form_1_Status__c/recordTypes/Job_Post_Date.recordType-meta.xml
<RecordType>
    <fullName>Job_Post_Date</fullName>
    <active>true</active>
    <label>Job Post Date</label>
</RecordType>