force-app/main/default/objects/Form_1_Status__c/recordTypes/Legacy.recordType-meta.xml
<RecordType>
    <fullName>Legacy</fullName>
    <active>true</active>
    <label>Legacy</label>
</RecordType>