force-app/main/default/objects/Form_1_Status__c/recordTypes/Minimum_Qualification_Withhold.recordType-meta.xml
<RecordType>
    <fullName>Minimum_Qualification_Withhold</fullName>
    <active>true</active>
    <label>Minimum Qualification Withhold</label>
</RecordType>