force-app/main/default/objects/Form_1_Status__c/recordTypes/On_Hold.recordType-meta.xml
<RecordType>
    <fullName>On_Hold</fullName>
    <active>true</active>
    <label>On Hold</label>
</RecordType>