force-app/main/default/objects/Form_1_Status__c/recordTypes/Packet_to_HR_Part_2_Received.recordType-meta.xml
<RecordType>
    <fullName>Packet_to_HR_Part_2_Received</fullName>
    <active>true</active>
    <label>Packet to HR - Part 2 Received</label>
</RecordType>