force-app/main/default/objects/Form_1_Status__c/recordTypes/Part_1_Return_to_Program.recordType-meta.xml
<RecordType>
    <fullName>Part_1_Return_to_Program</fullName>
    <active>true</active>
    <label>Part 1 Return to Program</label>
</RecordType>