force-app/main/default/objects/Form_1_Status__c/recordTypes/Part_2_Return_to_Program.recordType-meta.xml
<RecordType>
    <fullName>Part_2_Return_to_Program</fullName>
    <active>true</active>
    <label>Part 2 Return to Program</label>
</RecordType>