force-app/main/default/objects/Form_1_Status__c/recordTypes/Release_Applications.recordType-meta.xml
<RecordType>
    <fullName>Release_Applications</fullName>
    <active>false</active>
    <label>Release  Applications</label>
</RecordType>