force-app/main/default/objects/Form_1_Status__c/recordTypes/Release_of_Applications.recordType-meta.xml
<RecordType>
    <fullName>Release_of_Applications</fullName>
    <active>true</active>
    <label>Release of Applications</label>
</RecordType>