force-app/main/default/objects/Form_1_Status__c/recordTypes/Salary_Determination_Transfer_Eligibility_Check_Review.recordType-meta.xml
<RecordType>
    <fullName>Salary_Determination_Transfer_Eligibility_Check_Review</fullName>
    <active>true</active>
    <label>Salary Determination/Transfer Eligibility Check Review</label>
</RecordType>