force-app/main/default/objects/Form_1_Status__c/validationRules/Before_Next_Verification.validationRule-meta.xml
<ValidationRule>
    <fullName>Before_Next_Verification</fullName>
    <active>true</active>
    <description>preventing new Status if related status's fields are missing data.</description>
    <errorConditionFormula>ISNEW()
&amp;&amp;
Form_1__r.Before_Next_Total__c &gt; 0
&amp;&amp;
OR
(
RecordType.DeveloperName = "CalHR_Approved",
RecordType.DeveloperName = "CalHR_Denied",
RecordType.DeveloperName = "CalHR_Under_Review",
RecordType.DeveloperName = "Candidate_Accepts",
RecordType.DeveloperName = "Candidate_Declined",
RecordType.DeveloperName = "HR_Part_1_Approved",
RecordType.DeveloperName = "HR_Part_2_Approved",
RecordType.DeveloperName = "HR_Job_Offer_Clearance_Notification",
RecordType.DeveloperName = "HR_Final_Packet_Analyst_Approved",
RecordType.DeveloperName = "HR_Final_Packet_Manager_Approved",
RecordType.DeveloperName = "HR_Final_Packet_Submitted_to_CalHR",
RecordType.DeveloperName = "Interviews_Conducted",
RecordType.DeveloperName = "Interviews_Scheduled",
RecordType.DeveloperName = "Job_Post_Date",
RecordType.DeveloperName = "Legacy",
RecordType.DeveloperName = "On_Hold",
RecordType.DeveloperName = "Packet_to_HR_Part_1_Received",
RecordType.DeveloperName = "Packet_to_HR_Part_1_Under_Review",
RecordType.DeveloperName = "Packet_to_HR_Part_2_Received",
RecordType.DeveloperName = "Packet_to_HR_Part_2_Under_Review",
RecordType.DeveloperName = "Part_1_Return_to_Program",
RecordType.DeveloperName = "Part_2_Return_to_Program",
RecordType.DeveloperName = "Release_of_Applications",
RecordType.DeveloperName = "Release_Applications"
)</errorConditionFormula>
    <errorMessage>Data missing from previous status.  Please complete before creating a new status.</errorMessage>
</ValidationRule>