force-app/main/default/objects/Form_1_Status__c/validationRules/Changing_Status_Date_is_not_allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Changing_Status_Date_is_not_allowed</fullName>
    <active>true</active>
    <description>Changing Status Date is not allowed, must create a new record.</description>
    <errorConditionFormula>NOT(ISNEW()) &amp;&amp; ISCHANGED( Date_of_Status__c )</errorConditionFormula>
    <errorMessage>Date of Status field cannot be modified after save. Please create a new record.</errorMessage>
</ValidationRule>