force-app/main/default/objects/Form_1_Status__c/validationRules/Changing_Status_is_not_allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Changing_Status_is_not_allowed</fullName>
    <active>true</active>
    <description>Changing Status is not allowed, must create a new record.</description>
    <errorConditionFormula>NOT(ISNEW()) &amp;&amp; ISCHANGED(Form1_Status_Type__c) &amp;&amp;  NOT ( ISBLANK (PRIORVALUE(Form1_Status_Type__c) ) )</errorConditionFormula>
    <errorMessage>Status field cannot be modified after save. Please create a new status record</errorMessage>
</ValidationRule>