force-app/main/default/objects/Form_1_Status__c/validationRules/Deleting_Status_End_Date_is_not_allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Deleting_Status_End_Date_is_not_allowed</fullName>
    <active>true</active>
    <description>Deleting Status End Date is not allowed.</description>
    <errorConditionFormula>ISCHANGED( Status_End_Date__c ) &amp;&amp;  ISBLANK(Status_End_Date__c )</errorConditionFormula>
    <errorMessage>Deleting Status End Date is not allowed</errorMessage>
</ValidationRule>